# PonPon

./: package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Header.tsx  PomodoroTimer.tsx
src/components/CatAnimation/: CatAnimation.tsx
src/components/Music/: Music.tsx
src/components/Notes/: Notes.tsx
src/components/PomodoroTimer/: PomodoroTimer.tsx
src/components/Settings/: Settings.tsx
