[package]
name = "ponpon"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ponpon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cfg-if = "1.0"

# zbus is optional, enabled by the "with-zbus" feature
# Using a specific v3 version for stability in this example. Check crates.io for latest.
zbus = { version = "3.15.1", optional = true }

[features]
default = []
# Feature to enable zbus/MPRIS support for Linux
with-zbus = ["dep:zbus"]


# For Windows SMTC
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [ # Ensure this version is recent and compatible
    "Media_Control",
    "Storage_Streams", 
    "Foundation",      
    "Win32_System_WinRT", # Provides RoInitialize, RoUninitialize, RO_INIT_TYPE etc.
    "Win32_Foundation",   # Provides S_OK, S_FALSE, HRESULT
    "Win32_System_Com",   # For general COM utilities, might not be strictly needed if WinRT covers all
]}